# ethrex-l2-contracts-kit

./: .gitignore  README.md
contracts/: WETH9.sol  weth9.sol
docs/: WETH.md  deployer.md
examples/uniswap/: README.md  run.sh  swap_token
examples/uniswap/contracts/swap/: LiquidityProvider.sol  Makefile  Swap.sol
scripts/: Cargo.toml  deployer.rs
