[package]
name = "deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
hex = "0.4.3"
clap = { version = "4.4.11", features = ["derive"] }
secp256k1 = { version = "0.29.1", default-features = false, features = [
    "global-context",
    "recovery",
    "rand",
] }
reqwest = { version = "0.12.7", features = ["socks", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
ethereum-types = { version = "0.15.1", features = ["serialize"] }


ethrex-sdk = { path = "../../ethrex/crates/l2/sdk", package = "ethrex-sdk" }
ethrex-l2-rpc = { path = "../../ethrex/crates/l2/networking/rpc", package = "ethrex-l2-rpc" }
ethrex-rpc = { path = "../../ethrex/crates/networking/rpc", package = "ethrex-rpc" }

[[bin]]
name = "deployer"
path = "deployer.rs"
