[package]
name = "deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
hex = "0.4.3"
clap = { version = "4.4.11", features = ["derive"] }
secp256k1 = { version = "0.29.1", default-features = false, features = [
    "global-context",
    "recovery",
    "rand",
] }
reqwest = { version = "0.12.7", features = ["socks", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
ethereum-types = { version = "0.15.1", features = ["serialize"] }


ethrex-sdk = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-sdk", tag = "v0.0.4-alpha" }
ethrex-l2-rpc = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-l2-rpc", tag = "v0.0.4-alpha" }
ethrex-rpc = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-rpc", tag = "v0.0.4-alpha" }

[[bin]]
name = "deployer"
path = "deployer.rs"
